--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 
+[submodule "lib/hats-auth"]
+	path = lib/hats-auth
+	url = https://github.com/hats-protocol/hats-auth
