--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,12 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "lib/mech"]
-	path = lib/mech
-	url = https://github.com/gnosis/mech
-	branch = main
 [submodule "lib/hats-protocol"]
 	path = lib/hats-protocol
 	url = https://github.com/hats-protocol/hats-protocol
 [submodule "lib/solady"]
 	path = lib/solady
 	url = https://github.com/vectorized/solady
+[submodule "lib/foundry-mech"]
+	path = lib/foundry-mech
+	url = https://github.com/hats-protocol/foundry-mech
