--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,12 @@ on:
   workflow_dispatch:
 
 env:
-  FOUNDRY_PROFILE: lite
-  INFURA_KEY: ${{ secrets.INFURA_KEY }}
-  ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
-  GC_RPC: ${{ secrets.GC_RPC }}
-  POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
-  PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+  FOUNDRY_PROFILE: ci
+  # INFURA_KEY: ${{ secrets.INFURA_KEY }}
+  # ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
+  # GC_RPC: ${{ secrets.GC_RPC }}
+  # POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
+  # PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
   
 jobs:
   
