--- a/.github/workflows/foundry-gas-diff.yml
+++ b/.github/workflows/foundry-gas-diff.yml
@@ -14,13 +14,13 @@ on:
     - .github/workflows/foundry-gas-diff.yml
 
 env:
-  FOUNDRY_PROFILE: "lite"
-  INFURA_KEY: ${{ secrets.INFURA_KEY }}
-  ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
-  ETH_RPC: ${{ secrets.ETH_RPC }}
-  GC_RPC: ${{ secrets.GC_RPC }}
-  POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
-  PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+  FOUNDRY_PROFILE: "ci"
+#   INFURA_KEY: ${{ secrets.INFURA_KEY }}
+#   ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
+#   ETH_RPC: ${{ secrets.ETH_RPC }}
+#   GC_RPC: ${{ secrets.GC_RPC }}
+#   POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
+#   PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
 
 jobs:
   compare_gas_reports:
