--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   FOUNDRY_PROFILE: ci
-  # INFURA_KEY: ${{ secrets.INFURA_KEY }}
+  INFURA_KEY: ${{ secrets.INFURA_KEY }}
   # ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
   # GC_RPC: ${{ secrets.GC_RPC }}
   # POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
