--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = lib/multicall
 	url = https://github.com/mds1/multicall
 	branch = main
+[submodule "lib/solady"]
+	path = lib/solady
+	url = https://github.com/Vectorized/solady
