migrate to tokenbound libs

--- a/foundry.toml
+++ b/foundry.toml
@@ -13,6 +13,7 @@ remappings = [
   "solady/=lib/solady/src",
   "erc6551/=lib/erc6551/src/",
   "multicall/=lib/multicall/src/",
+  "tokenbound/=lib/tokenbound/src/",
 ]
 
 [profile.ci]
