troubleshoot ci pathing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,12 @@ jobs:
         with:
           submodules: recursive
 
+      - name: "Log environment details"
+        run: |
+          pwd
+          ls -al
+          solc --version
+
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
