--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
         run: |
           pwd
           ls -al
-          solc --version
+          cd src
+          ls -al
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
