--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 optimizer_runs = 1_000_000
-gas_reports = ["HatsWallet1ofN", "HatsWalletMofN"]
+gas_reports = ["HatsAccount1ofN", "HatsAccountMofN"]
 auto_detect_solc = false
 solc = "0.8.23"
 bytecode_hash = "none"
